--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,14 +1,7 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
 @import url('./reset.css');
-@import url('./vite-promo.css');
-@import url('./header.css');
+@import url('./timer.css');
 
-:root {
+/* :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
@@ -22,4 +15,28 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+} */
+
+.nav-list {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  gap: 30px;
+  align-items: start;
+  margin: 30px;
+}
+
+.nav-link {
+  display: block;
+  font-weight: 800;
+  letter-spacing: 0.02em;
+  line-height: 1.5;
+  font-size: larger;
+  border: 2px solid black;
+  padding: 10px;
+}
+
+.nav-link:hover,
+.nav-link:focus {
+  color: #747bff;
 }
