--- a/src/css/timer.css
+++ b/src/css/timer.css
@@ -2,19 +2,22 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 
-input {
+.flatpickr-input {
   font: inherit;
   border-radius: 4px;
   width: 272px;
   height: 40px;
-  margin-right: 8px;
-  /* border: 1px solid #808080; */
+  padding-left: 8px;
   cursor: pointer;
-  outline-color: #808080;
+  border: 1px solid #808080;
 }
 
-input.input-active {
-  outline-color: #4e75ff;
+.flatpickr-input:hover {
+  border: 1px solid #000;
+}
+
+.active {
+  border: 1px solid #4e75ff;
 }
 
 .nav-link-timer {
