--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,21 +1,6 @@
 @import url('./reset.css');
 @import url('./timer.css');
-
-/* :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-} */
+@import url('./snackbar.css');
 
 .nav-list {
   display: flex;
@@ -39,4 +24,8 @@
 .nav-link:hover,
 .nav-link:focus {
   color: #747bff;
+}
+
+body {
+  font-family: 'Montserrat', sans-serif;
 }
