--- a/src/css/snackbar.css
+++ b/src/css/snackbar.css
@@ -31,12 +31,9 @@ fieldset {
   margin: 0;
   padding-right: 0;
   margin-right: 0;
-
-
 }
 
 legend {
- 
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
@@ -49,7 +46,7 @@ input[type='radio'] {
 }
 
 button {
-  display: block;
+  /* display: block; */
   width: 100%;
   margin-top: 15px;
   background-color: #4e75ff;
@@ -64,4 +61,18 @@ button {
 
 button:hover {
   background-color: #6c8cff;
+}
+
+.nav-link-timer {
+  margin: 20px 20px;
+  display: block;
+  font-weight: 800;
+  letter-spacing: 0.02em;
+  line-height: 1.5;
+  font-size: larger;
+}
+
+.nav-link-timer:hover,
+.nav-link-timer:focus {
+  color: #747bff;
 }
