--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,6 @@
 @import url('./reset.css');
-@import url('./timer.css');
-@import url('./snackbar.css');
+/* @import url('./timer.css');
+@import url('./snackbar.css'); */
 
 .nav-list {
   display: flex;
